--- a/dev.env
+++ b/dev.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
-BASE_PICTURES_URL=http://localhost:3000
+CHARACTERS_API=https://rickandmortyapi.com/api
+MOCK_API=https://localhost:3000
