--- a/package.json
+++ b/package.json
@@ -22,16 +22,18 @@
     "@lemoncode/fonk-min-number-validator": "^1.2.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.19.2",
     "emotion": "^10.0.27",
     "formik": "^2.1.4",
+    "lodash.merge": "^4.6.2",
     "material-ui-rating": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
     "react-router-dom": "^5.2.0",
     "regenerator-runtime": "^0.13.5",
-    "lodash.merge": "^4.6.2"
+    "use-debounce": "^6.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
