feat: remove json-server

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "This is a basic app to see characters of rick and morty made with api rest and json-server",
   "main": "index.js",
   "scripts": {
-    "start": "run-p -l type-check:watch start:dev start:server",
+    "start": "run-p -l type-check:watch start:dev",
     "start:dev": "webpack-dev-server --config ./config/webpack/dev.js",
-    "start:server": "cd server && npm run mock-server",
     "build": "run-p -l type-check build:prod",
     "build:prod": "npm run clean && webpack --config ./config/webpack/prod.js",
     "type-check": "tsc --noEmit",
