--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-RICK_AND_MORTY_API=https://rickandmortyapi.com/api
+RICK_AND_MORTY_API=https://rickandmortyapi.com/graphql
 MOCK_API=https://localhost:3000
