--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "axios": "^0.19.2",
     "emotion": "^10.0.27",
     "formik": "^2.1.4",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "lodash.merge": "^4.6.2",
     "material-ui-rating": "^4.2.0",
     "react": "^16.13.1",
